# Gnome-VPN

./: .gitignore  BUILD.md  BUILD_REPORT.md  CLAUDE.md  MESON_BUILD_SUMMARY.md  QUICK_START.md  README.md  build.sh  install.sh  meson.build  meson_options.txt  package-deb.sh  shell.nix
data/: meson.build  nm-gnome-vpn-sso-service.name.in  nm-vpn-sso-service.conf  org.freedesktop.NetworkManager.vpn-sso.service.in
debian/: changelog  control  copyright  gnome-vpn-sso.postinst  rules
nix/: default.nix  gnome-vpn-sso.nix  nixos-module.nix  overlay.nix  packages.nix
python/: meson.build  vpn-sso-auth.py
python/core/: __init__.py  auth.py
src/: meson.build
src/auth-dialog/: README.md  main.c  meson.build  nm-vpn-sso-auth-dialog.c  nm-vpn-sso-auth-dialog.h
src/editor/: meson.build  nm-vpn-sso-editor.c  nm-vpn-sso-editor.h
src/libnm-plugin/: meson.build  nm-vpn-plugin-vpn-sso.c
src/service/: OPENCONNECT_RUNNER_README.md  OPENCONNECT_RUNNER_USAGE.md  ac-backend.c  ac-backend.h  credential-cache.c  credential-cache.h  gp-backend.c  gp-backend.h  main.c  meson.build  nm-vpn-sso-service.c  nm-vpn-sso-service.h  openconnect-runner-example.c  openconnect-runner.c  openconnect-runner.h  sso-handler.c  sso-handler.h
src/shared/: meson.build  utils.c  utils.h  vpn-config.h
